--- a/src/main/webapp/css/header_footer.css
+++ b/src/main/webapp/css/header_footer.css
@@ -2,18 +2,29 @@
 
 #wrap{ width:1400px; margin: 0 auto;}
 
-a{ text-decoration: none;}
+a{ text-decoration: none;
+display:flex;
+justify-content:center;
+}
 
 header{
 	width:100%;
 	display: flex;
 	flex-direction: column;
 }
+
+
+footer{
+	font-family: "Roboto", sans-serif;
+	font-size:80%;
+}
+
 #top_menu{
 	display: flex;
 	justify-content: space-between;
 }
-#logo{ flex:1;}
+#logo{ flex:1; cursor:pointer;}
+
 .gnb{ 
 	flex:5;
 	display: flex;
@@ -24,37 +35,49 @@ header{
 .gnb a{
 	text-decoration: none;
 	margin-left:20px;
-	font-family: gothic;
-	color:gray;
-	font-weight: bold;
+	font-family: "Roboto", sans-serif;
+	color:#3f4549;
 }
 
 #category_menu{
 	display: flex;
-	justify-content: space-between;
-	padding:30px;
+	padding: 50px;
 	background-color:white;
-	border-radius: 10px;
 	margin-bottom:10px;
 }
+
+#category_menu a:nth-child(1){
+	width:300px;
+	display:flex;
+	flex:1;
+}
+#category_menu a:nth-child(2){
+	width:300px;
+	display:flex;
+	flex :1;
+}
+#category_menu a:nth-child(3){
+	width:300px;
+	display:flex;
+	flex :1;
+}
+
 #category_menu a{
 	text-decoration: none;
-	color:gray;
-	font-family: gothic;
-	font-weight: bold;
+	color: #3f4549;
+	font-family: "Roboto", sans-serif;
 	font-size:1.2em;
 }
 
 .hmenu{
 	width:50px;
 	height:50px;
-	border:3px solid blueviolet;
 	display:none;
 }
 .hmenu div{
 	width: 30px;
 	height:3px;
-	background-color: blueviolet;
+	background-color: #3f4549;
 	margin:10px auto;
 	left:10px;
 	position:absolute;
