--- a/src/main/webapp/customer/css/qna.css
+++ b/src/main/webapp/customer/css/qna.css
@@ -1,1 +1,9 @@
 @charset "UTF-8";
+table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 8px;
+        }
+        th {
+            background-color: gray;
+        }
