--- a/src/main/webapp/css/header_footer.css
+++ b/src/main/webapp/css/header_footer.css
@@ -2,7 +2,7 @@
 
 #wrap{ width:1400px; margin: 0 auto;}
 
-a{ text-decoration: none;
+a{ text-decoration: none; color:#3f4549; font-size: 90%;
 }
 
 header{
@@ -15,6 +15,14 @@ header{
 footer{
 	font-family: "Roboto", sans-serif;
 	font-size:80%;
+}
+
+.admin{
+	display:flex;
+}
+
+.admin a{
+	width:20px;
 }
 
 #top_menu{
@@ -101,19 +109,6 @@ footer{
 .hmenu div:nth-child(1){  top:5px; }
 .hmenu div:nth-child(2){	top:15px; }
 .hmenu div:nth-child(3){	top:25px; }
-
-#main_img{
-	flex:1;
-	border-radius:20px 20px 20px 20px;
-	overflow: hidden;
-	display: flex;
-	border:1px solid blueviolet;
-}
-
-#main_img img{
-	width:100%;
-	height:350px;
-}
 
 .hmenu div.active:nth-child(1){
 	transform: rotate(45deg); 	top:15px; 	left:10px;
