--- a/src/main/webapp/mypage/css/mypage.css
+++ b/src/main/webapp/mypage/css/mypage.css
@@ -2,7 +2,7 @@
 
 #wrap{font-family: "Roboto", sans-serif}
 
-a{font-size:90%; text-decoration: none; color:#3f4549}
+a{text-decoration: none; color:#3f4549}
 
 
 .tb{
