--- a/src/main/webapp/product/css/product.css
+++ b/src/main/webapp/product/css/product.css
@@ -1,9 +1,16 @@
 @charset "UTF-8";
 
-a{text-decoration:none;}
+#productWrap{width:100%; display:flex; flex-direction:column; border:1px solid blue;}
 
-.productWrap{display:flex;}
+.tb{ width:100%; display: flex; flex-direction: column; margin-bottom:30px;}
+.row{  display: flex; justify-content:center; }
+.coltitle{  background: #3f4549; margin:1px; padding:10px; color:white; text-align: center;}
+.col{ border:1px dotted #3f4549; margin:1px; padding:10px;  text-align: center;}
+.title{flex:1; border:1px dotted black; text-align:center;}
+.btn{flex:1; border:1px dotted black; align-items:center;}
 
-.productWrap .pageName{flex:3; font-size:32px; font-weight:bold; margin:3px;}
 
-.productWrap .btn{flex:1; margin:5px; }
+.products{display: flex; flex-wrap:wrap; align-content:flex-start; flex-direction:row;}
+
+.product{width:350px; height:500px; border:1px dotted red; box-sizing:border-box;}
+.productImage{width:350px; height:400px; overflow:hidden;}
