--- a/src/main/webapp/customer/css/qna.css
+++ b/src/main/webapp/customer/css/qna.css
@@ -33,3 +33,7 @@
         text-align: center;
         margin-top: 20px;
     }
+    .secret-label {
+        color: gray;
+        font-size: 12px;
+    }
