--- a/src/main/webapp/css/header_footer.css
+++ b/src/main/webapp/css/header_footer.css
@@ -2,7 +2,7 @@
 
 #wrap{ width:1400px; margin: 0 auto;}
 
-a{ text-decoration: none; color:#3f4549; font-size: 90%;
+#wrap a{ text-decoration: none; color:#3f4549; font-size: 90%;
 }
 
 header{
