--- a/src/main/webapp/css/view.css
+++ b/src/main/webapp/css/view.css
@@ -72,7 +72,7 @@ h2 {
 
 input[type="button"] {
     padding: 5px 10px;
-    background-color: var(--primary-color);
+    background-color: #2e3438;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -87,7 +87,7 @@ input[type="button"]:hover {
 
 select {
     padding: 5px;
-    border: 1px solid var(--primary-color);
+    border: 1px solid #2e3438;
     border-radius: 5px;
     width:120px;
     margin-bottom:10px;
