--- a/src/main/webapp/chat/chat.css
+++ b/src/main/webapp/chat/chat.css
@@ -1,18 +1,52 @@
 @charset "UTF-8";
 
-.reply{ display: flex; flex-direction: column; margin-top:20px;}
-.reply_row{ display: flex;  }
-.reply_col{ padding:10px; margin:1px; border-radius: 3px; 
-	border:1px dotted blue;}
-.reply_col:nth-child(1){flex:1; text-align:center;}
-.reply_col:nth-child(2){flex:5; text-align:center;}
-.reply_col:nth-child(3){flex:1; text-align:left;}
-.reply_coll{ margin:1px; border-radius: 3px; 
-	border:1px dotted blue;}
-.reply_coll:nth-child(1){flex:5; text-align:center;}
-.reply_coll:nth-child(2){flex:1; text-align:center;}
-.reply_col reply_title{ font-weight:bold;}
+.chatsubmit{
+	margin-top: 5px;
+	text-align:right;
+	display: flex;
+	width: 50px;
+	height: 30px;
+	
+}
 
-.title_row{ display: flex; }
-.title_col{ flex:1; background: blue; color:white; text-align: center; height:20px; line-height: 20px; 
-padding:10px; margin:2px;}
+.chat-textarea{
+	
+	display: block;
+	width:100%;
+	margin-top:10px;
+	margin-bottom:10px;
+	padding: 10px;
+	resize:none;
+	box-sizing: border-box;
+	border-radius:20px 20px 20px 20px;
+	background-color: #f5f5f5;
+
+}
+.content1 input{
+	width:93%;
+	display: flex;
+	float:left;
+	margin-top:10px;
+	margin-right:10px;
+}
+.reply_row{
+	display: flex;
+}
+.reply_col:nth-child(1){
+	width: 100px;
+	text-align: right;
+	margin-right:10px;
+}
+.reply_col:nth-child(2){
+	width: 80%;
+}
+.reply_col:nth-child(3){
+	float:right;
+}
+
+.mydiv3 {
+  overflow-y: scroll;
+  height: 500px;
+  display:flex;
+  flex-direction:column-reverse;
+}
