--- a/src/main/webapp/product/css/product.css
+++ b/src/main/webapp/product/css/product.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-#productWrap{width:100%; display:flex; flex-direction:column; border:1px solid blue; margin: 0 auto; padding:20px; box-sizing:border-box;}
+#productWrap{width:100%; display:flex; flex-direction:column; margin: 0 auto; padding:20px; box-sizing:border-box;}
 .row{ flex:1; display: flex; justify-content:center; margin-bottom:10px;}
 
 .title{font-size:24px; font-weight:bold; margin-bottom:20px;}
@@ -14,7 +14,7 @@
 
 
 .products{display: flex; flex-wrap:wrap; justify-content:space-between; gap:20px;}
-.product{ flex:1 1 calc(25%-20px); max-width:calc(25%-20px); border-radius:10px; padding:10px; background-color:#fff; box-shadow:0 4px 8px rgba(0,0,0,0.1); display:flex; flex-direction:column; align-items:center; text-align:center; border:1px dotted red; box-sizing:border-box;}
+.product{width:300px; border-radius:10px; padding:10px; background-color:#fff; box-shadow:0 4px 8px rgba(0,0,0,0.1); display:flex; flex-direction:column; align-items:center; text-align:center; border:1px dotted black; box-sizing:border-box;}
 .productImage{width:100%; height:300px; overflow:hidden; border-radius:10px; margin-bottom:10px;}
 
 .productImage img{ width:100%; height:100%; object-fit:covoer; border-radius:10px;}
