--- a/src/main/webapp/css/view.css
+++ b/src/main/webapp/css/view.css
@@ -7,58 +7,71 @@
 } */
 
 
-body {
+/* body {
     background-color: var(--background-color);
     font-family: Arial, sans-serif;
     color: var(--text-color);
+} */
+.vititle{
+	border-bottom:1px solid #2e3438;
+}
+.vititle h2 {
+	display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-family: "Roboto", sans-serif;
+    font-size: 200%;
+    margin: 10px;
+    padding:10px;
 }
 
-h2 {
-    color: var(--primary-color);
-    text-align: center;
-    padding: 20px 0;
-}
-
-.reportViewContainer {
+.ViewContainer {
     width: 80%;
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid var(--primary-color);
+    border: 1px solid #3f4549;
     border-radius: 5px;
 }
 
-.rvfields-horizontal {
+.vifields-horizontal {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    border-bottom: 1px solid var(--primary-color);
+    border-bottom: 1px solid #3f4549;
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
 
-.rvfield {
+.vifield {
     display: flex;
     flex-direction: column;
     padding: 10px 20px;
 }
+.vicontent {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+    height:400px;
+    border-bottom: 1px solid #3f4549;
+}
 
-.rvfield label {
+.vifield label, .vicontent label {
     font-weight: bold;
     margin-bottom: 5px;
 }
 
-.rvfield div {
+.vifield div, .vicontent div {
     margin-bottom: 10px;
 }
 
-.rvbtn {
+.vibtn {
     padding-top: 10px;
     text-align: center;
 }
 
-.rvbtn a {
+.vibtn a {
     padding: 10px 20px;
     background-color: var(--primary-color);
     color: white;
@@ -66,11 +79,11 @@ h2 {
     border-radius: 5px;
 }
 
-.rvbtn a:hover {
+.vibtn a:hover {
     background-color: #2e3438;
 }
 
-input[type="button"] {
+.ViewContainer input[type="button"] {
     padding: 5px 10px;
     background-color: #2e3438;
     color: #fff;
@@ -81,11 +94,11 @@ input[type="button"] {
     
 }
 
-input[type="button"]:hover {
+.vifield input[type="button"]:hover {
     background-color: #2e3438;
 }
 
-select {
+.vifield select {
     padding: 5px;
     border: 1px solid #2e3438;
     border-radius: 5px;
@@ -93,22 +106,33 @@ select {
     margin-bottom:10px;
 }
 
+.ViewContainer form .searchbtn{
+   /* flex:1; */
+   width:200px;
+   margin:10px 3px;
+   background-color: #3f4549;
+   border:none;
+   color:white;
+   border-radius: 5px;
+   padding:10px 0;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
-    .reportViewContainer {
+    .ViewContainer {
         width: 90%;
     }
 
-    .rvfields-horizontal {
+    .vifields-horizontal {
         flex-direction: column;
     }
 
-    .rvfield {
+    .vifield, .vicontent {
         flex-direction: column;
         align-items: flex-start;
     }
 
-    .rvfield label, .rvfield div {
+    .vifield label, .vifield div, .vicontent label, .vicontent div {
         text-align: left;
         padding: 5px 0;
     }
