--- a/src/main/webapp/css/list.css
+++ b/src/main/webapp/css/list.css
@@ -6,11 +6,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    font-family: "Roboto", sans-serif;
+    font-family: "Noto Sans KR", sans-serif;
     font-size: 200%;
     margin: 30px;
 }
-a{text-decoration:none;}
+a{text-decoration:none;  color:#3f4549;}
 .content-wrapper {
     display: flex;
     font-family:"Noto Sans KR", sans-serif;
