--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -11,15 +11,40 @@ h2 {
 	color:#3f4549;
 	}
 
-#container {
+/* #container {
     display: flex; 
     justify-content: center; 
+    align-items: center;
   }
 
 #container img{
 	width:60%;
 	height:60%;
+} */
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
 }
+
+#box {
+    width: 1400px;
+    height: 400px;
+    background-color: white;
+    border: 1px solid black;
+    text-align: center; 
+}
+#small-box {
+  width: 700px;
+  height: 400px;
+  background-color: white;
+  border: 1px solid black;
+  margin-bottom: 20px;
+}
+
+
+
 
 
 
