--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
-#productWrap{width:100%; display:flex; flex-direction:column; margin: 0 auto; padding:20px; box-sizing:border-box;}
-.row{ flex:1; display: flex; justify-content:center; margin-bottom:10px;}
+#productWrap{width:100%; display:flex; flex-direction:column; margin: 0 auto; padding:20px; box-sizing:border-box; font-family: "Noto Sans KR", sans-serif;}
+.row{ flex:1; display: flex; justify-content:center; margin-bottom:10px; font-size:90%;}
 
-.title{font-size:32px; font-weight:bold; margin-bottom:20px;}
+.title{font-size:32px; font-weight:bold; margin-bottom:20px; display:flex; justify-content:flex-end;}
 
 
 .tb{ width:100%; display: flex; flex-direction: column; margin-bottom:30px; }
@@ -22,7 +22,8 @@
 .productModel,
 .productPrice,
 .productUserid,
-.productSold {
+.productSold ,
+.productChat{
     margin-bottom: 10px;
     font-size: 16px;
 }
@@ -70,25 +71,27 @@
 
 /* Button styles */
 input[type="button"] {
-    background-color: grey;
+    background-color: #3f4549;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin: 5px;
-    trainsition : background-color 0.3s ease;
+    transition : background-color 0.3s ease;
+    font-size:90%;
 }
 
 input[id="sellButton"]{
-	width:90%;
-	background-color: grey;
+	width:70%;
+	background-color: #3f4549;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin: 5px;
+    font-size:90%;
 }
 
 .col {
@@ -119,7 +122,8 @@ input[id="sellButton"]{
 
 
 input[type="button"]:hover {
-    background-color: blue;
+    background-color: black;
+    color: white;
 }
 
 /* Additional styling for clarity and aesthetics */
