--- a/src/main/webapp/css/chat.css
+++ b/src/main/webapp/css/chat.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+.searching{
+	padding: 10px;
+}
+.reply{
+	font-family: "Noto Sans KR", sans-serif;
+}
 .chatsubmit{
 	margin-top: 5px;
 	text-align:right;
@@ -41,7 +47,7 @@
   height: 500px;
   display:flex;
   flex-direction:column-reverse;
-  background-color:#bebebe;
+  background-color:#A7EEFF;
 }
 
 .chat_reply_col:nth-child(1){
@@ -84,26 +90,47 @@
 .chat_row{
 	display:flex;
 	flex-direction:row;
+	cursor: pointer;
+	border-top: 0.5px solid #828282;
+	background-color: #f5f5f5;
+	align-items:center;
 }
 .chatcol:nth-child(1){
-	flex:1;
+	width:60px;
 	text-align:center;
+	
+	border-left: 0.5px solid #828282;
+	border-right: 0.5px solid #828282;
+	color:#464646;
 }
 .chatcol:nth-child(2){
 	flex:2;
-}
-.chatcol:nth-child(3){
-	flex:2;
 	text-align:center;
+
+	margin-left:15px;
+	font-size: 120%;
+	color:#464646;
+}
+
+.chatcol:nth-child(3){
+	flex:4;
+	font-size: 120%;
+	margin-top:5px;
+	margin-bottom:5px;
+	color:#464646;
 }
 .chatcol:nth-child(4){
 	flex:1;
 	text-align:center;
+	
 }
-.chatcol:nth-child(5){
-	flex:1;
-	text-align:center;
-}
+
 .phonename{
 	text-size-adjust:1.2rem;
+	font-size:100%;
+
+}
+.chatsubmit button{
+	background:#00acee;
+	color: white;
 }
