--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,59 +1,95 @@
-body{font-family: "Noto Sans KR", sans-serif;}
-
-h2 {
-	display:flex; 
-	font-size: 200%; 
-	font-family: "Noto Sans KR", sans-serif;
-  	font-optical-sizing: auto;
-  	font-weight: weight;
-  	font-style: normal;
-	justify-content:center; 
-	color:#3f4549;
-	}
-
-/* #container {
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-  }
-
-#container img{
-	width:60%;
-	height:60%;
-} */
 .container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px; 
+}
+
+.box {
+    width: calc(33.33% - 20px); 
+    height: 600px; 
+    background-color: #f0f0f0;
+    margin-bottom: 20px; 
+    box-sizing: border-box; 
+    padding: 10px; 
+    border: 1px solid #ddd; 
+    border-radius: 20px; 
+    display: flex; 
+    flex-direction: column; 
     justify-content: center; 
+    align-items: center; 
+}
+.box h2{
+	font-weight: bold;
+}
+
+
+
+.box-inner {
+    width: 100%;
+    height: calc(33.33% - 10px); 
+    background-color: #ccc;
+    margin-bottom: 10px; 
+    box-sizing: border-box; 
+    padding: 10px; 
+    border-radius: 20px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.box-inner img {
+    display: block;
+    width: 100%; 
+    border-radius: 20px;
+    max-width: 100%; 
+    max-height: 100%; 
+    margin: auto;
+}
+
+
+
+
+/* .product_List {
+    width: 100%; 제품 목록의 너비
+    overflow-y: auto; 제품 목록이 넘칠 경우 스크롤 표시
+    position: relative;
+    margin: 0 auto;
+}
+
+.product {
+    width: 300px;
+    transition: transform 0.5s ease-in-out;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    text-align: center;
+    border: 1px dotted black;
+    box-sizing: border-box;
+    float: left;
 }
 
-#box {
-    width: 1400px;
-    height: 400px;
-    background-color: white;
-    border: 1px solid black;
-    text-align: center; 
-}
-#small-box {
-  width: 700px;
-  height: 400px;
-  background-color: white;
-  border: 1px solid black;
-  margin-bottom: 20px;
+.productImage {
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
-.product_List{width:900px; overflow:hidden; position:relative; margin:0 auto;}
-.product{width:300px; transition: transform 0.5s ease-in-out; border-radius:10px; padding:10px; background-color:#fff; box-shadow:0 4px 8px rgba(0,0,0,0.1); display:flex; flex-direction:column; align-items:center; text-align:center; border:1px dotted black; box-sizing:border-box; float:left;}
-.productImage{width:100%; height:300px; overflow:hidden; border-radius:10px; margin-bottom:10px;}
-.productImage img{ width:100%; height:100%; object-fit:covoer; border-radius:10px;}
+.productImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
 .productModel,
 .productPrice,
 .productUserid {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
     font-size: 16px;
 }
-
-
-
-
+ */
