product 버튼 기강잡기 + 이미지랑 정보 위치 수정

--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -66,6 +66,14 @@
     border-radius: 5px;
 }
 
+.button_box{
+	display:flex;
+	width:700px;
+	margin : 0 auto;
+	justify-content: center;
+	
+}
+
 .col {
     width: 70%;
     padding: 10px;
