--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -19,11 +19,13 @@
     justify-content: center; 
     align-items: center; 
 }
+
+
+
 .box h2{
-	font-weight: bold;
+    font-weight: bold;
+    text-align:center;
 }
-
-
 
 .box-inner {
     width: 100%;
@@ -45,51 +47,11 @@
     margin: auto;
 }
 
-
-
-
-/* .product_List {
-    width: 100%; 제품 목록의 너비
-    overflow-y: auto; 제품 목록이 넘칠 경우 스크롤 표시
-    position: relative;
-    margin: 0 auto;
-}
-
-.product {
-    width: 300px;
-    transition: transform 0.5s ease-in-out;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border: 1px dotted black;
-    box-sizing: border-box;
-    float: left;
-}
-
-.productImage {
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 10px;
-    margin-bottom: 10px;
-}
-
-.productImage img {
+.box:nth-child(5) img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
-.productModel,
-.productPrice,
-.productUserid {
-    margin-bottom: 10px;
-    font-size: 16px;
-}
- */
+
