시간 출력 오류 수정

--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -28,7 +28,8 @@
 .productPrice,
 .productUserid,
 .productSold ,
-.productChat{
+.productChat,
+.productDate{
     margin-bottom: 10px;
     font-size: 16px;
 }
