--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -20,11 +20,9 @@
     align-items: center; 
 }
 
-
-
-.box h2{
+.box h2 {
     font-weight: bold;
-    text-align:center;
+    text-align: center;
 }
 
 .box-inner {
@@ -54,4 +52,135 @@
     border-radius: 20px;
 }
 
+.box:nth-child(8) {
+    width: calc(33.33% - 20px); 
+    height: 600px;
+}
 
+.box:nth-child(8) img {
+    object-fit: cover;
+    border-radius: 20px;
+    width: 100%;
+    height: 100%;
+}
+
+.box:nth-child(9) {
+    width: calc(33.33% - 20px); 
+    height: 600px; 
+    background-color: #f0f0f0;
+    margin-bottom: 20px; 
+    box-sizing: border-box; 
+    padding: 10px; 
+    border: 1px solid #ddd; 
+    border-radius: 20px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+}
+
+.box:nth-child(9) h2 {
+    font-weight: bold;
+    text-align: center;
+}
+
+.box:nth-child(9) img {
+    display: block;
+    width: 90%; 
+    border-radius: 20px;
+    max-width: 100%; 
+    max-height: 90%; 
+    margin-top: 1%; 
+    margin-bottom: 1%; 
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box:nth-child(11) {
+    width: calc(33.33% - 20px); 
+    height: 600px; 
+    background-color: #f0f0f0;
+    margin-bottom: 20px; 
+    box-sizing: border-box; 
+    padding: 10px; 
+    border: 1px solid #ddd; 
+    border-radius: 20px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+}
+
+.box:nth-child(11) h2 {
+    font-weight: bold;
+    text-align: center;
+}
+
+.box:nth-child(11) img {
+    display: block;
+    width: 90%; 
+    border-radius: 20px;
+    max-width: 100%; 
+    max-height: 90%; 
+    margin-top: 5%; 
+    margin-bottom: 5%; 
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box:nth-child(12) {
+    width: calc(33.33% - 20px); 
+    height: 600px; 
+    background-color: #f0f0f0;
+    margin-bottom: 20px; 
+    box-sizing: border-box; 
+    padding: 10px; 
+    border: 1px solid #ddd; 
+    border-radius: 20px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+}
+
+.box:nth-child(12) h2 {
+    font-weight: bold;
+    text-align: center;
+}
+
+.box:nth-child(12) img {
+    display: block;
+    width: 90%; 
+    border-radius: 20px;
+    max-width: 100%; 
+    max-height: 80%; 
+    margin-top: 1%; 
+    margin-bottom: 5%; 
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box:nth-child(12) .image-container {
+    position: relative;
+    width: 100%; 
+    height: 100%;
+}
+
+.box:nth-child(12) .box-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    border-radius: 20px;
+}
+
+.box:nth-child(12) .red-border {
+    position: absolute;
+    top: 42%;
+    left: 0;
+    width: 100%;
+    height: 25%;
+    border: 3px solid red;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
