--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+
+a{
+	font-weight:bold;
+}
+
 #productWrap{width:100%; display:flex; flex-direction:column; margin: 0 auto; padding:20px; box-sizing:border-box; font-family: "Noto Sans KR", sans-serif;}
 .row{ flex:1; display: flex; justify-content:center; margin-bottom:10px; font-size:90%;}
 
@@ -132,9 +137,6 @@ input[id="sellButton"]{
 }
 
 
-
-
-
 input[type="button"]:hover {
     background-color: black;
     color: white;
@@ -160,3 +162,10 @@ input[type="button"]:hover {
 .detailInfos .row {
     margin-bottom: 10px;
 }
+
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
