--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -23,6 +23,12 @@
 .box h2 {
     font-weight: bold;
     text-align: center;
+    font-family: "Noto Sans KR", sans-serif;
+}
+
+.box h3 {
+    text-align: center;
+    font-family: "Noto Sans KR", sans-serif;
 }
 
 .box-inner {
@@ -183,4 +189,28 @@
     border: 3px solid red;
     border-radius: 20px;
     box-sizing: border-box;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .box {
+        width: calc(50% - 20px);
+        height: auto;
+    }
+}
+
+@media (max-width: 767px) {
+    .container {
+        margin: 10px;
+    }
+
+    .box {
+        width: 100%;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .box-inner {
+        height: auto;
+        margin-bottom: 10px;
+    }
 }
