--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,8 +1,9 @@
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 20px; 
+    flex-direction: row;
 }
 
 .box {
