--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -2,13 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 20px; 
-    flex-direction: row;
+    margin: 20px;
 }
 
 .box {
-    width: calc(33.33% - 20px); 
-    height: 600px; 
+    width: 100%;;
+    height: 500px; 
     background-color: #f0f0f0;
     margin-bottom: 20px; 
     box-sizing: border-box; 
@@ -43,156 +42,77 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
+.box-inner:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+
 .box-inner img {
     display: block;
     width: 100%; 
+    height: 100%;
     border-radius: 20px;
     max-width: 100%; 
     max-height: 100%; 
     margin: auto;
 }
 
-.box:nth-child(5) img {
+.box1 {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.box1 .box-inner {
+    width: 20%; 
+    height: 200px; 
+    background-color: #ccc;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 5px; 
     border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-.box:nth-child(8) {
-    width: calc(33.33% - 20px); 
-    height: 600px;
-}
-
-.box:nth-child(8) img {
-    object-fit: cover;
+.box1 .box-inner img {
+    max-width: 100%;
+    max-height: 100%;
     border-radius: 20px;
-    width: 100%;
-    height: 100%;
+    object-fit: contain;
+}
+ .container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 20px;
+    max-width: 100%;
+}
+.container .box {
+    flex: 1;
+    margin: 0 10px; 
+    width: calc(50% - 20px);
 }
 
-.box:nth-child(9) {
-    width: calc(33.33% - 20px); 
-    height: 600px; 
-    background-color: #f0f0f0;
-    margin-bottom: 20px; 
-    box-sizing: border-box; 
-    padding: 10px; 
-    border: 1px solid #ddd; 
-    border-radius: 20px; 
-    display: flex; 
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
-}
-
-.box:nth-child(9) h2 {
-    font-weight: bold;
-    text-align: center;
-}
-
-.box:nth-child(9) img {
-    display: block;
-    width: 90%; 
-    border-radius: 20px;
-    max-width: 100%; 
-    max-height: 90%; 
-    margin-top: 1%; 
-    margin-bottom: 1%; 
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.box:nth-child(11) {
-    width: calc(33.33% - 20px); 
-    height: 600px; 
-    background-color: #f0f0f0;
-    margin-bottom: 20px; 
-    box-sizing: border-box; 
-    padding: 10px; 
-    border: 1px solid #ddd; 
-    border-radius: 20px; 
-    display: flex; 
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
-}
-
-.box:nth-child(11) h2 {
-    font-weight: bold;
-    text-align: center;
-}
-
-.box:nth-child(11) img {
-    display: block;
-    width: 90%; 
-    border-radius: 20px;
-    max-width: 100%; 
-    max-height: 90%; 
-    margin-top: 5%; 
-    margin-bottom: 5%; 
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.box:nth-child(12) {
-    width: calc(33.33% - 20px); 
-    height: 600px; 
-    background-color: #f0f0f0;
-    margin-bottom: 20px; 
-    box-sizing: border-box; 
-    padding: 10px; 
-    border: 1px solid #ddd; 
-    border-radius: 20px; 
-    display: flex; 
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
-}
-
-.box:nth-child(12) h2 {
-    font-weight: bold;
-    text-align: center;
-}
-
-.box:nth-child(12) img {
-    display: block;
-    width: 90%; 
-    border-radius: 20px;
-    max-width: 100%; 
-    max-height: 80%; 
-    margin-top: 1%; 
-    margin-bottom: 5%; 
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.box:nth-child(12) .image-container {
+.image-container {
     position: relative;
     width: 100%; 
     height: 100%;
 }
-
-.box:nth-child(12) .box-image {
+.box-image {
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: contain; 
     border-radius: 20px;
 }
 
-.box:nth-child(12) .red-border {
-    position: absolute;
-    top: 42%;
-    left: 0;
-    width: 100%;
-    height: 25%;
-    border: 3px solid red;
-    border-radius: 20px;
-    box-sizing: border-box;
-}
 
-@media (min-width: 768px) and (max-width: 1024px) {
+/* @media (min-width: 768px) and (max-width: 1024px) {
     .box {
         width: calc(50% - 20px);
         height: auto;
@@ -210,8 +130,8 @@
         margin-bottom: 10px;
     }
 
-    .box-inner {
+   .box-inner {
         height: auto;
         margin-bottom: 10px;
-    }
-}
+    }  
+} */
