찜기능 추가
찜 뷰 추가

--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -31,7 +31,8 @@
 .productUserid,
 .productSold ,
 .productChat,
-.productDate{
+.productDate,
+.productWantcount{
     margin-bottom: 10px;
     font-size: 16px;
 }
