--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -31,31 +31,40 @@
     font-family: "Noto Sans KR", sans-serif;
 }
 
-.box-inner {
-    width: 100%;
-    height: calc(33.33% - 10px); 
-    background-color: #ccc;
-    margin-bottom: 10px; 
-    box-sizing: border-box; 
-    padding: 10px; 
-    border-radius: 20px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+.box .box-inner {
+        width: 90%; 
+        height:90%;
+        background-color: #ccc;
+        margin: 5px; 
+        box-sizing: border-box;
+        padding: 10px;
+        border-radius: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .box .box-inner img {
+        max-width: 100%; 
+        max-height: 100%; 
+        border-radius: 20px; 
+        object-fit: contain; 
+    }
+    
+   .box-inner h2 {
+    position: absolute;
+    top: 0; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px 10px; 
 }
 
 .box-inner:hover {
     transform: scale(1.05); 
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
-}
-
-.box-inner img {
-    display: block;
-    width: 100%; 
-    height: 100%;
-    border-radius: 20px;
-    max-width: 100%; 
-    max-height: 100%; 
-    margin: auto;
 }
 
 .box1 {
@@ -110,6 +119,8 @@
     object-fit: contain; 
     border-radius: 20px;
 }
+
+/**/
 
 
 /* @media (min-width: 768px) and (max-width: 1024px) {
