--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -20,7 +20,7 @@
 }
 
 
-.products{display: flex; flex-wrap:wrap; justify-content:space-between; gap:20px;}
+.products{display: flex; flex-wrap:wrap; justify-content:flex-start; gap:20px;}
 .product{width:300px; border-radius:10px; padding:10px; background-color:#fff; box-shadow:0 4px 8px rgba(0,0,0,0.1); display:flex; flex-direction:column; align-items:center; text-align:center; border:1px dotted black; box-sizing:border-box;}
 .productImage{width:100%; height:300px; overflow:hidden; border-radius:10px; margin-bottom:10px;}
 
@@ -37,10 +37,12 @@
     font-size: 16px;
 }
 
-.productSold {
-    color: red;
-    font-weight: bold;
+.productModel,
+.productPrice{
+	    font-weight: bold;
 }
+
+
 
 .container{ display:flex; justify-content: space-between;}
 .detailImage, .detailInfos {
