--- a/src/main/webapp/css/list.css
+++ b/src/main/webapp/css/list.css
@@ -5,7 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    font-family:"Roboto Mono", monospace;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
     font-size: 200%;
     margin: 30px;
 }
