--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -14,7 +14,7 @@ a{
 
 .box {
     width: 100%;
-    height: 500px;
+    height: 260px;
     background-color: #f0f0f0;
     margin-bottom: 20px;
     display: flex;
@@ -24,9 +24,12 @@ a{
 }
 
 .box h1 {
-    font-weight: bold;
     text-align: center;
-    font-family: "Roboto Mono", monospace;
+    font-family: "Roboto mono", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500 bold;
+    font-style: normal;
+    font-size:40px;
     flex-direction: row;
     display: flex;
     color: #342dbd;
@@ -36,6 +39,7 @@ a{
     font-weight: bold;
     text-align: center;
     font-family: "Noto Sans KR", sans-serif;
+    font-size:26px;
     flex-direction: row;
     display: flex;
 }
@@ -90,7 +94,7 @@ a{
 
 .box1 .box-inner {
     width: 20%;
-    height: 200px;
+    height: 160px;
     background-color: #ccc;
     box-sizing: border-box;
     padding: 10px;
@@ -132,7 +136,7 @@ a{
 
 .new-list-item img {
     max-width: 100%;
-    max-height: 200px;
+    max-height: 140px;
     border-radius: 20px;
     object-fit: contain;
 }
@@ -141,6 +145,8 @@ a{
     margin-top: 10px;
     font-family: "Noto Sans KR", sans-serif;
     text-align: center;
+    font-size:18px;
+    color:#342DBD;
 }
 
 .features-container {
