--- a/src/main/webapp/css/submenu.css
+++ b/src/main/webapp/css/submenu.css
@@ -10,10 +10,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    
 }
 
 #sub_menu a:hover {
-    color: #3259f7;
+    color:#342DBD;
 }
 
 #sub_menu div {
@@ -25,7 +26,10 @@
     font-size: 1.2rem; 
     font-weight: bold;
     text-decoration: none;
-    font-family:"Roboto Mono", monospace;
+    font-family: "Roboto Condensed", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
 @media (max-width: 768px) {
